# Stellariad

./: .gitignore  Makefile  Makelist  Makemoon  README.md  android-release-key.keystore  diff.sh  install_marelle.sh  package.yaml  perf_testing  remake  tags.sh  totalmem.sh
android/: AndroidManifest.xml  build.xml  install.sh  install_release.sh
marelle-deps/: android.pl  egl.pl  inotify.pl  java.pl  luarocks.pl  moon.pl  opengl.pl
rust-vulkan-demo/: .gitignore  Cargo.toml  todo.md
rust-vulkan-demo/crates/delegate/: Cargo.toml
rust-vulkan-demo/crates/delegate/src/: lib.rs
rust-vulkan-demo/crates/gfx/: Cargo.toml
rust-vulkan-demo/crates/gfx/src/: call.rs  lib.rs  material.rs  model.rs  pass.rs  shaders.rs  system.rs  targets.rs  types.rs  window.rs
rust-vulkan-demo/crates/gfx/src/scene/: camera.rs  mod.rs  space.rs
rust-vulkan-demo/crates/gfx/src/types/: vertex.rs
rust-vulkan-demo/crates/input/: Cargo.toml
rust-vulkan-demo/crates/input/src/: lib.rs
rust-vulkan-demo/crates/property/: Cargo.toml
rust-vulkan-demo/crates/property/src/: lib.rs
rust-vulkan-demo/crates/ringbuffer/: Cargo.toml
rust-vulkan-demo/crates/ringbuffer/src/: lib.rs
rust-vulkan-demo/src/: engine.rs  main.rs  particle.rs  rotating_obj.rs  system.rs  types.rs
rust-vulkan-demo/src/physics/: collision.rs
src/: bounds.c  bounds.h  camera.c  camera.cpp  camera.h  canyon.c  canyon.cpp  canyon.h  canyon_terrain.c  canyon_terrain.cpp  canyon_terrain.h  canyon_zone.c  canyon_zone.cpp  canyon_zone.h  collision.c  collision.cpp  collision.h  common.fwd.h  common.h  delegate.h  input.h  (+70 more)
(+424 files in other folders)
