[package]
name = "rust-vulkan-demo"
version = "0.1.0"
authors = ["Nick Pollard <nickpollard@google.com>"]
edition = "2018"

[dependencies]
argh = "0.1.3"
tobj = "0.1.6"
vulkano = "0.18.0"
vulkano-shaders = "0.18"
vulkano-win = "0.18"
cgmath = "0.16"
image = "0.20"
winit = "0.22"
time = "0.1.37"
rand = "0.6"
wayland-client = "0.21.0"
delegate = { path = "crates/delegate" }
gfx = { path = "crates/gfx" }
property = { path = "crates/property" }
input = { path = "crates/input" }
ringbuffer = { path = "crates/ringbuffer" }
